--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,45 @@
-body{
-    font-size: 16px;
-    background-color: #DCE1E3;
-    font-family: 'Oxygen', sans-serif;
+body {
+    background: #222D32;
+    font-family: 'Newsreader';
 }
 
+.login-box {
+    margin-top: 75px;
+    height: auto;
+    background: #1A2226;
+    text-align: center;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
 
+.login-key {
+    height: 100px;
+    font-size: 80px;
+    line-height: 100px;
+    background: -webkit-linear-gradient(#27EF9F, #0DB8DE);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.login-title {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 30px;
+    letter-spacing: 2px;
+    margin-top: 15px;
+    font-weight: bold;
+    color: #ECF0F5;
+}
+
+.g-signin2{
+    width: 100%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+  
+.g-signin2 > div{
+    margin: 0 auto;
+  }
+
+.main-container{
+    margin-top: 50px;
+}
