--- a/app/src/main/res/layout/activity_volunteer_anasayfa.xml
+++ b/app/src/main/res/layout/activity_volunteer_anasayfa.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
-    tools:context=".Anasayfa">
+    tools:context=".Volunteer_Anasayfa">
 
 
 
