--- a/app/src/main/res/layout/activity_volunteer_emergency.xml
+++ b/app/src/main/res/layout/activity_volunteer_emergency.xml
@@ -1,33 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer_layout"
-    tools:context=".Volunteer">
+    tools:context=".Volunteer_Emergency">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <include
-            layout="@layout/activity_tool_bar">
-        </include>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Gönüllü Katılım Talebi"
-            android:textSize="50sp"
-            android:textStyle="bold"
-            android:gravity="center"/>
+
+        <include layout="@layout/activity_tool_bar"></include>
+
+        <include layout="@layout/activity_volunteer_camera_galery"></include>
+
     </LinearLayout>
+
     <RelativeLayout
         android:layout_width="300dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@color/white">
-        <include
-            layout="@layout/activitiy_nav_drawer"/>
+
+        <include layout="@layout/activitiy_nav_drawer" />
     </RelativeLayout>
+
 </androidx.drawerlayout.widget.DrawerLayout>
