--- a/app/src/main/res/layout/activity_volunteer_emergency.xml
+++ b/app/src/main/res/layout/activity_volunteer_emergency.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".Volunteer_Emergency">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,7 +15,24 @@
 
         <include layout="@layout/activity_tool_bar"></include>
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Gönüllü Katılım Talebi"
+            android:textColor="#050505"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
         <include layout="@layout/activity_volunteer_camera_galery"></include>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     </LinearLayout>
 
@@ -25,6 +43,7 @@
         android:background="@color/white">
 
         <include layout="@layout/activitiy_nav_drawer" />
+
     </RelativeLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
