--- a/app/src/main/res/layout/activity_volunteer_emergency.xml
+++ b/app/src/main/res/layout/activity_volunteer_emergency.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Gönüllü Katılım Talebi"
+            android:text="Bildiri Talebi"
             android:textColor="#050505"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -27,8 +27,16 @@
         <include layout="@layout/activity_volunteer_camera_galery"></include>
 
 
-    </LinearLayout>
 
+    </LinearLayout>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <include layout="@layout/activity_volunteer_notificate"></include>
+
+</LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
