--- a/app/src/main/res/layout/activity_volunteer_camera_galery.xml
+++ b/app/src/main/res/layout/activity_volunteer_camera_galery.xml
@@ -22,26 +22,26 @@
         android:id="@+id/CameraBtn"
         android:layout_width="105dp"
         android:layout_height="45dp"
-        android:text="Camera"
         android:onClick="ClickCameraBtn"
-        app:backgroundTint="#FF9800"
+        android:text="Camera"
+        app:backgroundTint="#352D20"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.245"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.072" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/GaleryBtn"
         android:layout_width="107dp"
         android:layout_height="45dp"
-        android:text="Galery"
         android:onClick="ClickGaleryBtn"
-        app:backgroundTint="#FF9800"
+        android:text="Galery"
+        app:backgroundTint="#352D20"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/CameraBtn"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.072" />
+        app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
