Done( all interface of volunteer user and page that allows me to create a request of joining the manpower at disaster events.) #8

--- a/app/src/main/res/layout/activity_volunteer_participate_form.xml
+++ b/app/src/main/res/layout/activity_volunteer_participate_form.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
-    tools:context=".Volunteer_Participate">
+    tools:context=".Volunteer_ParticipateForm">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,8 +14,15 @@
         <include
             layout="@layout/activity_tool_bar">
         </include>
-
-        <include layout="@layout/activity_tool_participate"></include>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Gönüllü Katılım Formu"
+            android:textColor="#050505"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+        <include layout="@layout/activity_tool_participate_form"></include>
 
         <LinearLayout
             android:layout_width="match_parent"
