--- a/app/src/main/res/layout/activity_volunteer_participate_request.xml
+++ b/app/src/main/res/layout/activity_volunteer_participate_request.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
-    tools:context=".Volunteer_Anasayfa">
+    tools:context=".Volunteer_ParticipateRequest">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,15 +14,8 @@
         <include
             layout="@layout/activity_tool_bar">
         </include>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="ANASAYFA"
-            android:textColor="#050505"
-            android:textSize="15sp"
-            android:textStyle="bold" />
 
+        <include layout="@layout/activity_tool_participate_request"></include>
 
         <LinearLayout
             android:layout_width="match_parent"
