--- a/app/src/main/res/layout/activitiy_nav_drawer.xml
+++ b/app/src/main/res/layout/activitiy_nav_drawer.xml
@@ -105,6 +105,31 @@
             android:layout_marginRight="48dp" />
 
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:onClick="ClickForm">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Kayıt Bilgi Formu"
+            android:padding="12dp"
+            android:layout_marginStart="16dp"
+            tools:ignore="Suspicious0dp"
+            android:layout_marginLeft="16dp">
+
+        </TextView>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="48dp"
+            android:src="@drawable/ic_info"
+            android:layout_marginRight="48dp" />
+
+    </LinearLayout>
 
 
 </LinearLayout>
