--- a/app/src/main/res/layout/activity_volunteer_emergency.xml
+++ b/app/src/main/res/layout/activity_volunteer_emergency.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Bildiri Talebi"
+            android:text="Acil Bildiri Talebi"
             android:textColor="#050505"
             android:textSize="15sp"
             android:textStyle="bold" />
