--- a/app/src/main/res/layout/activitiy_nav_drawer.xml
+++ b/app/src/main/res/layout/activitiy_nav_drawer.xml
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:onClick="ClickVolunter">
+        android:onClick="ClickParticipateRequest">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -90,7 +90,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Acil Bildirim"
+            android:text="Acil İhbar"
             android:padding="12dp"
             android:layout_marginStart="16dp"
             tools:ignore="Suspicious0dp"
@@ -110,12 +110,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:onClick="ClickForm">
+        android:onClick="ClickParticipateForm">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Kayıt Bilgi Formu"
+            android:text="Kayıt Bilgisi"
             android:padding="12dp"
             android:layout_marginStart="16dp"
             tools:ignore="Suspicious0dp"
@@ -140,14 +140,19 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Çıkış Yap"
+            android:text="Çıkış"
             android:padding="12dp"
             android:layout_marginStart="16dp"
             tools:ignore="Suspicious0dp"
             android:layout_marginLeft="16dp">
 
         </TextView>
-
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="48dp"
+            android:src="@drawable/ic_logout"
+            android:layout_marginRight="48dp" />
 
     </LinearLayout>
 
