Create User and Check User on Sign-in
Check if user already on database.
Create user if users first sign-in on applcation (currently using e-mail to check).

--- a/app/src/main/res/layout/activity_personel__progress.xml
+++ b/app/src/main/res/layout/activity_personel__progress.xml
@@ -122,9 +122,11 @@
             android:layout_marginStart="36dp"
             android:layout_marginLeft="36dp"
             android:layout_marginTop="30dp"
+            android:background="@color/white"
             android:text="İstek Oluştur/Güncelle"
             android:textColor="@color/black"
             android:textSize="18sp"
+            app:backgroundTint="#5AE311"
             app:layout_constraintBottom_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="parent"
