--- a/app/src/main/res/layout/activitiy_nav_drawer.xml
+++ b/app/src/main/res/layout/activitiy_nav_drawer.xml
@@ -131,6 +131,7 @@
 
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/PersonelScreen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
