--- a/app/src/main/res/layout/activity_volunteer__register_info.xml
+++ b/app/src/main/res/layout/activity_volunteer__register_info.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/drawer_layout"
-    tools:context=".Volunteer_ParticipateForm">
+    tools:context=".Volunteer_RegisterInfo">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,15 +16,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Gönüllü Katılım Formu"
+            android:text="Kayıt Bilgisi"
             android:textColor="#050505"
             android:textSize="15sp"
             android:textStyle="bold" />
-
-        <include layout="@layout/activity_tool_participate_form"/>
+        <include layout="@layout/activity_tool_register_info"></include>
 
         <LinearLayout
-            android:id="@+id/participate_address"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"></LinearLayout>
@@ -41,3 +37,4 @@
             layout="@layout/activitiy_nav_drawer"/>
     </RelativeLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
+
