--- a/app/src/main/res/layout/activity_volunteer_notificate.xml
+++ b/app/src/main/res/layout/activity_volunteer_notificate.xml
@@ -15,7 +15,7 @@
         android:text="Detaylı Bilgi Veriniz:"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3"
+        app:layout_constraintBottom_toTopOf="@+id/message_disaster"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,13 +32,13 @@
         android:text="Afet Tipini Giriniz:"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
+        app:layout_constraintBottom_toTopOf="@+id/type_disaster"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.964" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/type_disaster"
         android:layout_width="335dp"
         android:layout_height="44dp"
         android:ems="10"
@@ -51,7 +51,7 @@
         app:layout_constraintVertical_bias="0.647" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName3"
+        android:id="@+id/message_disaster"
         android:layout_width="327dp"
         android:layout_height="49dp"
         android:ems="10"
@@ -60,7 +60,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
+        app:layout_constraintTop_toBottomOf="@+id/type_disaster"
         app:layout_constraintVertical_bias="0.446" />
 
     <Button
@@ -73,7 +73,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
+        app:layout_constraintTop_toBottomOf="@+id/message_disaster"
         app:layout_constraintVertical_bias="0.389" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
