#10 Google Maps (Location mark) update
Locations can be determined on the map. Geocoder has IOException problem.

--- a/app/src/main/res/layout/activity_afet_bolgesi.xml
+++ b/app/src/main/res/layout/activity_afet_bolgesi.xml
@@ -9,7 +9,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Map"
+        android:text="Harita"
         android:id="@+id/btnMap"
         tools:ignore="MissingConstraints" />
 
