--- a/app/src/main/res/layout/activity_personel__progress.xml
+++ b/app/src/main/res/layout/activity_personel__progress.xml
@@ -85,48 +85,119 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.647" />
 
+
+        <LinearLayout
+            android:layout_width="480dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/text3"
+                android:layout_width="129dp"
+                android:layout_height="26dp"
+                android:layout_marginStart="36dp"
+                android:layout_marginLeft="36dp"
+                android:layout_marginTop="30dp"
+                android:background="@color/white"
+                android:text="Miktarı :"
+                android:textColor="@color/black"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/text4"
+                android:layout_width="98dp"
+                android:layout_height="26dp"
+                android:layout_marginStart="36dp"
+                android:layout_marginLeft="50dp"
+                android:layout_marginTop="30dp"
+                android:layout_toRightOf="@id/text3"
+                android:background="@color/white"
+                android:text="Ekipman :"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:layout_marginHorizontal="20dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="480dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/updateEquipment"
+                android:layout_width="158dp"
+                android:layout_height="60dp"
+                android:ems="10"
+                android:inputType="number"
+                android:scrollbars="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.647" />
+
+            <Spinner
+                android:id="@+id/listOfEquipment"
+                android:layout_width="246dp"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="0.9dp"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="480dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/UpdateButton"
+                android:layout_width="150dp"
+                android:layout_height="46dp"
+                android:layout_marginStart="36dp"
+                android:layout_marginLeft="36dp"
+                android:layout_marginTop="30dp"
+                android:background="@color/white"
+                android:text="İstek Oluştur Güncelle"
+                android:textColor="@color/black"
+                android:textSize="11sp"
+                app:backgroundTint="#5AE311"
+                app:layout_constraintBottom_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.5" />
+
+            <Button
+                android:id="@+id/HistoryButton"
+                android:layout_width="150dp"
+                android:layout_height="46dp"
+                android:layout_marginStart="36dp"
+                android:layout_marginLeft="36dp"
+                android:layout_marginTop="30dp"
+                android:background="@color/white"
+                android:text="Durum Geçmişi"
+                android:textColor="@color/black"
+                android:textSize="11sp"
+                app:backgroundTint="#0CA8E4"
+                app:layout_constraintBottom_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.5" />
+
+        </LinearLayout>
+
+
+
         <TextView
-            android:id="@+id/text3"
+            android:id="@+id/textHata"
             android:layout_width="281dp"
             android:layout_height="26dp"
             android:layout_marginStart="36dp"
             android:layout_marginLeft="36dp"
             android:layout_marginTop="30dp"
             android:background="@color/white"
-            android:text="Talep Edilen Ek Ekipman Miktarı :"
-            android:textColor="@color/black"
+            android:text="Eksik veya hatalı bilgi girildi"
+            android:textColor="#FF0000"
             android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.5" />
-
-
-        <EditText
-            android:id="@+id/updateEquipment"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:scrollbars="vertical"
-            android:ems="10"
-            android:inputType="number"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.647" />
-
-        <Button
-            android:id="@+id/UpdateButton"
-            android:layout_width="314dp"
-            android:layout_height="46dp"
-            android:layout_marginStart="36dp"
-            android:layout_marginLeft="36dp"
-            android:layout_marginTop="30dp"
-            android:background="@color/white"
-            android:text="İstek Oluştur/Güncelle"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            app:backgroundTint="#5AE311"
             app:layout_constraintBottom_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="parent"
@@ -157,5 +228,6 @@
         <include layout="@layout/activitiy_nav_drawer" />
 
     </RelativeLayout>
+
 
 </androidx.drawerlayout.widget.DrawerLayout>
