#10 Added Return Button and getData()
Added Return Button and implement basics of getting data from database. Data retrieval through database still could not be completed, but simply infrastructure was created.

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -31,9 +32,16 @@
             android:text="Bul"
             android:id="@+id/btn_git"
             />
-
-
-
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Geri"
+        android:id="@+id/btn_geri"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true">
+    </Button>
 
 </RelativeLayout>
