InfoControl Button Added, InfoWindowAdapter implemented
#10 White_Border added for use infoWindowAdapter, also infoControlButton implemented for show and hide info window.

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -44,4 +44,15 @@
         android:layout_alignParentBottom="true">
     </Button>
 
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_below="@id/lineer"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp"
+        android:scaleType="centerCrop"
+        android:id="@+id/place_info"
+        android:src="@drawable/ic_map_info"/>
+
+
 </RelativeLayout>
