--- a/app/src/main/res/layout/activity_authorized_anasayfa.xml
+++ b/app/src/main/res/layout/activity_authorized_anasayfa.xml
@@ -7,9 +7,6 @@
     android:layout_height="match_parent"
     android:id="@+id/drawer_layout"
     tools:context=".Authorized_Anasayfa">
-
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,12 +15,20 @@
             layout="@layout/activity_tool_bar">
         </include>
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="ANASAYFA"
+            android:textColor="#050505"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <include layout="@layout/activity_tool_anasayfa"></include>
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Yönetici Anasayfa"
-            android:textSize="50sp"
-            android:textStyle="bold"
-            android:gravity="center"/>
+            android:orientation="vertical"></LinearLayout>
+
     </LinearLayout>
     <RelativeLayout
         android:layout_width="300dp"
@@ -33,8 +38,4 @@
         <include
             layout="@layout/activitiy_nav_drawer"/>
     </RelativeLayout>
-
-
-
-
 </androidx.drawerlayout.widget.DrawerLayout>
